# cuhkvoting

./: .gitignore  README.md  pyproject.toml  voting
docs/: benty.md  interactive.md
papers/: 2501.00001.json  2604.19435.json  2604.22380v1.json
src/cuhkvoting/: __init__.py  benty.py  cli.py  interactive.py
tests/: test_arxiv_retry.py  test_client_version_notice.py  test_display_name_overrides.py  test_inspire_fallback.py  test_interactive_dispatch.py  test_interactive_keys.py  test_interactive_session.py  test_interactive_smoke.py  test_interactive_theme.py  test_topvoted_sort.py  test_vote_metadata.py  test_vote_result.py
