[project]
name = "cuhkvoting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Otto Akseli Hannuksela", email = "otto.akseli.hannuksela@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer-slim",
]

[project.scripts]
cuhkvoting = "cuhkvoting:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
