[project]
name = "cuhkvoting"
version = "0.2.1"
description = "CLI to browse arXiv papers and vote on them, with records stored in GitHub."
readme = "README.md"
authors = [
    { name = "Otto Akseli Hannuksela", email = "otto.akseli.hannuksela@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer-slim",
]

[project.optional-dependencies]
benty = ["beautifulsoup4"]

[project.scripts]
cuhkvoting = "cuhkvoting:main"
cuhkvoting-benty = "cuhkvoting.benty:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
